fixed overflow issue

--- a/frontend/app/styles/modal.scss
+++ b/frontend/app/styles/modal.scss
@@ -1,26 +1,24 @@
 .loginModal .modal-dialog {
     display: flex;
     justify-content: center;
-    flex: 1;
-    width: 100%;
+    width: 60%;
 }
 
 .loginModal .modal-content {
-    width: 50%;
+    width: 100%;
     background-color: transparent;
 }
 
 .loginModal .modal-footer {}
 
 .registerModal .modal-dialog {
-    flex: 1;
-    width: 100%;
+    width: 70%;
     display: flex;
     justify-content: center;
 }
 
 .registerModal .modal-content {
-    width: 50%;
+    width: 100%;
     background-color: transparent;
 }
 
